tests/test_data/lighthouse-tekton/expected/networking.k8s.io/v1/Ingress/nexus.yaml
# Source: jxboot-helmfile-resources/templates/700-nexus-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: nexus
spec:
  rules:
  - http:
      paths:
      - pathType: ImplementationSpecific
        backend:
          service:
            name: nexus
            port:
              number: 80
    host: nexus-jx.mydomain.com
  tls:
  - hosts:
    - nexus-jx.mydomain.com
    secretName: "tls-mydomain-com-s"
